# Scheduler

./: CMakeLists.txt  Doxyfile.in  README.md  ROADMAP.md
Test/: Test.cpp
dataset/: example1  example2  jobs
doc/cahier_des_charges/: BION_MARTIN_VIAU-Cahier_des_charges.aux  BION_MARTIN_VIAU-Cahier_des_charges.out  BION_MARTIN_VIAU-Cahier_des_charges.tex  BION_MARTIN_VIAU-Cahier_des_charges.toc
doc/final_report/: BION_MARTIN_VIAU-Final_report.tex  main.bib
doc/specifications/: .fuse_hidden000000d000000001  .fuse_hidden00002f9f00000002  .fuse_hidden0000302600000003  .fuse_hidden0000303100000004  BION_MARTIN_VIAU-Cahier_des_charges.aux  BION_MARTIN_VIAU-Cahier_des_charges.out  BION_MARTIN_VIAU-Cahier_des_charges.tex  BION_MARTIN_VIAU-Cahier_des_charges.toc
src/: .network.cpp.swp  <  Controller.cpp  Controller.h  JobException.h  constants.h  controller.cpp  controller.h  job.cpp  job.h  main.cpp  main.h  message_handler.cpp  message_handler.h  network.cpp  network.h  reader.cpp  reader.h  scheduler.cpp  scheduler.h
src/Job/: Job.cpp  Job.h
src/Reader/: Reader.cpp  Reader.h
src/Scheduler/: Scheduler.h
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
src/socket/: .Socket.cpp.swp  ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h
src/tests/: .networkTests.cpp.swp  Test.cpp  common.h  controllerTests.cpp  controllerTests.h  jobTests.cpp  jobTests.h  networkTests.cpp  networkTests.h  socketTests.cpp  socketTests.h  tests.cpp  tests.h
test/: Test.cpp
